# JINNI

./: .gitignore  .hf_readme  README.md  TESTING.md  app.py  product_positioning.md  pyproject.toml  requirements.txt
.github/workflows/: sync-hf.yml  sync-to-hf.yml
doc2md/: __init__.py  api.py  app.py  cli.py  llm_presets.py
doc2md/converters/: __init__.py  csv_converter.py  docx_converter.py  epub_converter.py  html_converter.py  json_converter.py  md_converter.py  pdf_converter.py  pptx_converter.py  rtf_converter.py  txt_converter.py
doc2md/models/: __init__.py  document.py
doc2md/segmenter/: __init__.py  segmenter.py
doc2md/utils/: image_handler.py
doc2md/writers/: markdown_writer.py
scripts/: diagnose.py  rag_audit.py  run_audit.py  show_vectors.py
test_data/: gen_stress_test.py  long_doc.docx  report_30pages.docx  report_30pages.md  sample.csv  sample.docx  sample.md  sample.txt  stress_test.docx
