[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2md"
version = "0.2.0"
description = "Document to Markdown converter — CLI + Gradio UI, 10+ formats"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["markdown", "pdf", "converter", "document", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "python-docx>=1.1.0",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.11.0",
    "python-pptx>=0.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "striprtf>=0.0.23",
    "EbookLib>=0.18",
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "gradio>=4.0.0",
    "openai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/RJSHWT/doc2md"
Source = "https://github.com/RJSHWT/doc2md"
Tracker = "https://github.com/RJSHWT/doc2md/issues"

[tool.setuptools.packages.find]
include = ["doc2md*"]

[project.scripts]
doc2md = "doc2md.cli:main"
doc2md-api = "doc2md.api:main"
